--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-bootstrap-toggle": "^2.3.2",
+    "react-data-table-component": "^6.3.1",
     "react-dom": "^16.11.0",
+    "react-input-mask": "^2.0.4",
+    "react-overlay-loader": "0.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-switch": "^5.0.1",
     "react-text-mask": "^5.4.3",
+    "styled-components": "^5.0.1",
     "validator-brazil": "^1.2.0"
   },
   "scripts": {
