--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-autocomplete-select": "^0.1.10",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-bootstrap-toggle": "^2.3.2",
     "react-data-table-component": "^6.3.1",
